make it better please11sdds

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://capstone2team.herokuapp.com/",
+  "proxy": "https://capstone2team.herokuapp.com/",
   "devDependencies": {
     "cross-env": "^7.0.3"
   }
