--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "zustand": "^4.0.0"
   },
   "scripts": {
-    "heroku-postbuild": "yarn install && yarn build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "yarn run build",
     "server": "json-server --watch data.json --port 9000",
     "dev": "concurrently \"yarn start\" \"yarn server\" ",
     "react-start": "set BROWSER=none && yarn start"
   },
+  "homepage": "https://article-in-ear.netlify.app",
+}
   "eslintConfig": {
     "extends": [
       "react-app",
